keyvalues-parser/tests/snapshots/text_parser__rendered-base_multiple_raw_strings.snap
---
source: keyvalues-parser/tests/text_parser.rs
assertion_line: 145
expression: rendered

---
#base "one_base.res"
#base "../another_base.vdf"
#base "other\path\sep.pop"

"Some\non\escaped\text"
{
	"Unquoted\non\escaped\text"	"And\some\value"
}

