keyvalues-parser/tests/snapshots/text_parser__rendered-base_quoted.snap
---
source: keyvalues-parser/tests/text_parser.rs
assertion_line: 127
expression: rendered

---
#base "some/base.vdf"

"Key"
{
}

