keyvalues-parser/tests/snapshots/text_parser__rendered-compact.snap
---
source: keyvalues-parser/tests/text_parser.rs
expression: rendered
---
"foo"
{
	""
	{
	}
	"bar"	"baz"
}
