keyvalues-parser/tests/snapshots/text_parser__rendered-null_byte.snap
---
source: keyvalues-parser/tests/text_parser.rs
assertion_line: 94
expression: rendered

---
"Key"
{
}

