keyvalues-parser/tests/snapshots/text_parser__rendered-raw_strings.snap
---
source: keyvalues-parser/tests/text_parser.rs
assertion_line: 109
expression: rendered

---
"Some\text\here"
{
	"more\text\here"	"and\here"
}

