keyvalues-parser/tests/snapshots/text_parser__rendered-special_characters.snap
---
source: keyvalues-parser/tests/text_parser.rs
assertion_line: 94
expression: rendered

---
"Outer Key"
{
	"Escaped Characters"	"\n\r\t\"\\"
	"Mixed"	"\n\t\n\t\n\t\\\""
	"Raw Newline"	"\n"
	"Raw Tab"	"\t"
}

