keyvalues-parser/tests/snapshots/text_parser__rendered-unquoted_strings.snap
---
source: keyvalues-parser/tests/text_parser.rs
assertion_line: 94
expression: rendered

---
"OuterKey"
{
	"SequenceKey"	"SequenceVal"
	"SequenceKey"
	{
	}
}

